[package]
name = "signum-plotter"
version = "2.6.0"
license = "GPL-3.0"
authors = ["jjos2372, forked from PoC Consortium"]
description = """
signum-plotter - a PoC2 plotter written in Rust
"""
repository = "https://github.com/signum-network/signum-plotter"
documentation = "https://github.com/signum-network/signum-plotter"
keywords = ["signum", "plotter", "rust", "cryptocurrency"]
readme = "README.md"
edition = "2021"

[features]
opencl = ["ocl"]
simd=[]

[dependencies]
crossbeam-channel = "0.3.6"
ocl = { version = "0.19.7", optional = true }
clap = { version = "4.5", features = ["derive"] }
raw-cpuid = "6.1.0"
sys-info = "0.6.0"
cfg-if = "0.1.6"
pbr = "1.0.1"
humanize-rs = "0.1.5"
libc = "0.2.97"
rayon = "1.0.3"
core_affinity = "0.5.9"
stopwatch = "0.0.7"
fs2 = "0.4.3"
page_size = "0.4.1"

[target.'cfg(target_os = "linux")'.dependencies]
thread-priority = "0.1.0"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["std","fileapi","securitybaseapi"] }

[build-dependencies]
cc = "1.0"

[dev-dependencies]
rust-crypto = "0.2.36"
